# ChangeLog for x11-themes/tango-icon-theme
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/tango-icon-theme/ChangeLog,v 1.55 2011/06/15 08:32:30 mduft Exp $

  15 Jun 2011; Markus Duft <mduft@gentoo.org> tango-icon-theme-0.8.90.ebuild:
  add ~x86-interix prefix keyword

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org>
  tango-icon-theme-0.8.90.ebuild:
  alpha/arm/ia64 stable wrt #353167

  27 Jan 2011; Jeroen Roovers <jer@gentoo.org> tango-icon-theme-0.8.90.ebuild:
  Stable for HPPA too.

  08 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  tango-icon-theme-0.8.90.ebuild:
  Fix imagemagick vs. graphicsmagick depend wrt #314421 by Wojciech Porczyk.

  06 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  tango-icon-theme-0.8.90.ebuild:
  Transfer Prefix keywords

  24 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  tango-icon-theme-0.8.90.ebuild:
  Fix LICENSE to public-domain wrt #278634.

  01 Jun 2009; Raúl Porcel <armin76@gentoo.org>
  tango-icon-theme-0.8.90.ebuild:
  sparc stable wrt #270825

  31 May 2009; Markus Meier <maekke@gentoo.org>
  tango-icon-theme-0.8.90.ebuild:
  amd64 stable, bug #270825

  27 May 2009; Christian Faulhammer <fauli@gentoo.org>
  tango-icon-theme-0.8.90.ebuild:
  stable x86, bug 270825

  25 May 2009; Brent Baude <ranger@gentoo.org>
  tango-icon-theme-0.8.90.ebuild:
  Marking tango-icon-theme-0.8.90 ppc64 for bug 270825

  23 May 2009; nixnut <nixnut@gentoo.org> tango-icon-theme-0.8.90.ebuild:
  ppc stable #270825

*tango-icon-theme-0.8.90 (28 Apr 2009)

  28 Apr 2009; Samuli Suominen <ssuominen@gentoo.org>
  +tango-icon-theme-0.8.90.ebuild:
  Version bump.

  21 Mar 2008; Samuli Suominen <ssuominen@gentoo.org>
  -tango-icon-theme-0.8.0.ebuild, tango-icon-theme-0.8.1.ebuild:
  Fix HOMEPAGE and SRC_URI.

  14 Oct 2007; Markus Rothe <corsair@gentoo.org>
  tango-icon-theme-0.8.1.ebuild:
  Stable on ppc64; bug #195254
