@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/tango-icon-theme
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/tango-icon-theme/ChangeLog,v 1.55 2011/06/15 08:32:30 mduft Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/tango-icon-theme/ChangeLog,v 1.56 2012/04/23 05:19:26 ssuominen Exp $
+
+  23 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
+  tango-icon-theme-0.8.90.ebuild:
+  Force more recent librsvg to ensure rsvg-convert command is available (and
+  use it instead of plain rsvg) wrt #413183 by "nvinson"
 
   15 Jun 2011; Markus Duft <mduft@gentoo.org> tango-icon-theme-0.8.90.ebuild:
   add ~x86-interix prefix keyword
